# ImageApp

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.docker/: Dockerfile
app/: db.py  main.py  settings.py
app/handler/: image_handler.py
app/model/: image.py
app/repository/: image_repo.py
app/router/: image_router.py  router.py
app/schema/: image.py
app/storage/: blob.py  create_fake_blob.py
app/tests/: test_blob.py  test_handler.py  test_model.py  test_repo.py  test_schema.py
app/tests/fixtures/: data.py
